<resources>
    <string name="app_name">Movies TMDB</string>
    <string name="latest">Latest Movies</string>
    <string name="text_movies">Movies</string>
    <string name="text_only">Only</string>
    <string name="text_for_you">For You</string>
    <string name="text_loading">Loading</string>
    <string name="text_retry">Retry</string>
    <string name="text_cast">Cast</string>
    <string name="text_related">Related</string>
    <string name="text_trailer">Trailer</string>
    <string name="text_my_list">My List</string>
    <string name="text_more_info">More Info</string>
    <string name="text_error_loading">Sorry, something has gone wrong!</string>
    <string name="text_search">Search</string>
    <string name="text_search_hint">Once Upon A Time</string>
    <string name="text_result_for">Result for</string>
    <string name="text_no_result">No Result</string>
    <string name="text_no_result_desc">Apparently we don\'t have what you are looking for!</string>
</resources>