<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SearchActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/text_search"
                    android:textColor="@color/textColorPrimary"
                    android:fontFamily="@font/sfprotextbold"
                    android:textSize="@dimen/_18sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/colorSearchBackground"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editTextSearch"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@null"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textColor="@color/textColorPrimary"
                            android:hint="@string/text_search_hint"
                            android:fontFamily="@font/sfprotextregular"
                            android:textColorHint="@color/textColorThird"
                            android:textSize="@dimen/_12sdp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_4sdp"
                        android:background="@color/colorAccent">

                        <ImageView
                            android:layout_width="@dimen/_22sdp"
                            android:layout_height="@dimen/_22sdp"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/_5sdp"
                            app:srcCompat="@drawable/ic_search"
                            app:tint="@color/colorBackground"
                            tools:ignore="VectorDrawableCompat" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ln_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:layout_gravity="center_vertical"
                            android:text="@string/text_result_for"
                            android:textColor="@color/textColorPrimary"
                            android:fontFamily="@font/sfprotextbold"
                            android:textSize="@dimen/_14sdp"
                            />

                        <TextView
                            android:id="@+id/txt_result"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_4sdp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:layout_gravity="center_vertical"
                            android:text="das"
                            android:textColor="@color/colorAccent"
                            android:fontFamily="@font/sfprotextbold"
                            android:textSize="@dimen/_14sdp"
                            />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_no_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/_minus50sdp"
                    android:src="@drawable/img_no_search_result"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true">
                </ImageView>

                <TextView
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/text_no_result"
                    android:textColor="@color/textColorPrimary"
                    android:fontFamily="@font/sfprotextbold"
                    android:textAlignment="center"
                    android:textSize="@dimen/_20sdp"/>

                <TextView
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/text_no_result_desc"
                    android:textColor="@color/textColorSecundary"
                    android:fontFamily="@font/sfprotextregular"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14sdp"/>

            </LinearLayout>

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_file"
            android:visibility="gone"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>