<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:layout_marginTop="@dimen/_15sdp"
    tools:context=".Activities.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                app:srcCompat="@drawable/ic_muvi_name"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_search"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/ic_search"></ImageView>

            </LinearLayout>

        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:paddingBottom="@dimen/_5sdp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ln_slider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.opensooq.pluto.PlutoView
                                android:id="@+id/slider_home"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                app:indicator_visibility="true"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.opensooq.pluto.PlutoIndicator
                                android:id="@+id/slider_indicator"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_10sdp"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:gravity="center"
                                app:selected_color="@color/colorAccent"
                                app:selected_height="@dimen/_6sdp"
                                app:selected_width="@dimen/_6sdp"
                                app:selected_padding_left="@dimen/_1sdp"
                                app:selected_padding_right="@dimen/_1sdp"
                                app:shape="oval"
                                app:unselected_color="@color/textColorPrimary"
                                app:unselected_height="@dimen/_4sdp"
                                app:unselected_width="@dimen/_4sdp"
                                app:unselected_padding_left="@dimen/_1sdp"
                                app:unselected_padding_right="@dimen/_1sdp" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/ln_genres"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recycler_view_genres"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ln_movies"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/ln_more_peliculas"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_30sdp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:layout_gravity="center_vertical"
                                    android:text="@string/latest"
                                    android:textColor="@color/textColorPrimary"
                                    android:fontFamily="@font/sfprotextbold"
                                    android:textSize="@dimen/_14sdp"
                                    />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/_4sdp"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:layout_gravity="center_vertical"
                                    android:text="@string/text_movies"
                                    android:textColor="@color/colorAccent"
                                    android:fontFamily="@font/sfprotextbold"
                                    android:textSize="@dimen/_14sdp"
                                    />

                            </LinearLayout>

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recycler_view_movies"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ln_recommended"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/ln_more_recommended"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_30sdp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:layout_gravity="center_vertical"
                                    android:text="@string/text_only"
                                    android:textColor="@color/textColorPrimary"
                                    android:fontFamily="@font/sfprotextbold"
                                    android:textSize="@dimen/_14sdp"
                                    />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/_4sdp"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:layout_gravity="center_vertical"
                                    android:text="@string/text_for_you"
                                    android:textColor="@color/colorAccent"
                                    android:fontFamily="@font/sfprotextbold"
                                    android:textSize="@dimen/_14sdp"
                                    />

                            </LinearLayout>

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recycler_view_recommended"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_file" />

</RelativeLayout>